app/admin/media/css/style.css
body {
	font-size: 12px;
}
.dropdown-menu {
	font-size: 13px
}

#login {
	background-color: #ddd;
	color: #fff
}

	#login-wrapper {
		max-width: 460px;
		margin: 0 auto;
		margin-top: 40px
	}

	#login-content {
		color: #222;
		padding: 42px 48px;
		background: #fff;
		border-radius: 3px;
		margin-top: 15px
	}

.form-condensed .form-group {
    margin-top: 0;
    margin-bottom: 5px;
}

.panel-body .actions {
	position: absolute;
	right: 25px;
	top: 10px
}

.glyphicon-ok {
	color: #8bc512
}

.glyphicon-remove {
	color: #db2e1b
}

/**
 * Dropzone
 */
.dropzone, .dropzone-wrapper {
	position: relative;
	background: #fcfcfc;
	border: dashed 1px #ddd;
	padding: 20px;
	cursor: pointer
}

	.dropzone .dz-message, .dropzone-wrapper .dz-message {
		width: 190px;
		opacity: .5;
		margin: 0 auto;
		text-align: center
	}

		.dropzone .dz-message span, .dropzone-wrapper .dz-message span {
			display: block;
		}

		.dropzone .progress, .dropzone-wrapper .progress {
			position: absolute;
			left: 20px;
			bottom: 0;
			height: 15px;
			display: none;
			width: 180px;
			left: 50%;
			margin-left: -90px
		}

.dz-preview {
	display: none
}

/**
 * Forms
 */
 .form-inline .form-group {
 	margin-left: 0;
 	margin-right: 0
 }

/**
 * Document/edit
 */
#added_tags .label {
	font-size: 1em;
}

